app/buffers/buffers.css
.buffer-map {
    display: flex;
    flex-wrap: wrap;
}

.buffer-map .buffer {
    width: 35px;
    height: 35px;
    border: 1px solid #ccc;
    padding: 3px;
    margin: 1px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: small;
    position: relative;
}

.buffer-map .buffer > div {
    display: flex;
    justify-content: center;
}

.buffer-map .buffer.buffer--locked {
    background-color: #2bf;
}

.buffer-map .buffer.buffer--dirty {
    border: 1px solid red;
    background-image: linear-gradient(45deg, #ffffff 45.45%, #db8e4f 45.45%, #db8e4f 50%, #ffffff 50%, #ffffff 95.45%, #db8e4f 95.45%, #db8e4f 100%);
    background-size: 15.56px 15.56px;
}

.buffer-map .buffer__details {
    background: white;
    padding: 5px;
    border-radius: 3px;
    border: 1px solid #eee;
    box-shadow: 3px 3px 3px #eee;
    position: absolute;
    top: 100%;
    width: 300px;
    left: 0;
    flex-direction: column;
}

.buffer-map .buffer__details::after {
    content: '';
    width: 0;
    height: 0;
    position: absolute;
    left: 0;
    border: 10px solid transparent;
    border-bottom: 10px solid white;
    border-left: 10px solid white;
    top: -20px;
    z-index: 1;
}

.buffer__details__close {
    cursor: pointer;
    color: #2bf;
    text-align: left;
}

.buffer__details__close:hover {
    text-decoration: underline;
    color: rgb(255, 115, 34);
}

